--- a/devices.yaml
+++ b/devices.yaml
@@ -3,9 +3,10 @@ switches:
   - host: 192.168.1.1
     username: admin
     password: admin123
-  - host: 192.168.1.2
+  - host: 10.2.0.1
     username: admin
-    password: admin123
-  - host: 192.168.1.3
+    password: admin
+  - host: 10.1.0.1
     username: admin
-    password: admin123
+    password: admin
+  
